2010-01-10 WANG Lu <coolwanglu(a)gmail.com>
	* STRING supported
	* Fixed a bug relacted to match_flag, now match_flags seems to be
      `dangerous` since I made it a union now.
	* Fixed a memory bug in target_memory_info_array.c

2010-01-09 WANG Lu <coolwanglu(a)gmail.com>
    * BYTEARRAY supported, oh yeah

2010-01-07 WANG Lu <coolwanglu(a)gmail.com>
	* Added uservalue_t and clean up some value_t, this make it more flexible,
	  and make it possible to support more data types and even user-specific
	  scan routine
	* in scan routines old_value and user_value are both provided
	* clean up MATCHES_AND_VALUES stuff, since currently we don't use MATCHES
	  or VALUES
	* removed snapshot and use MATCHANY instead, such that this can be used to
      filter out data types
	* now user can provide float numbers
	* INCREASEDBY and DECREASEDBY support
    
2010-01-06 WANG Lu <coolwanglu(a)gmail.com>
    * Fixed detection of reverse change, but it's now working partially, see
	  comments in `help option`
	* MATCHANY can be used to filter out types now
	* GREATERTHAN & LESSTHAN supported

2010-01-03 WANG Lu <coolwanglu(a)gmail.com>
    * better GUI
	* support scanning for a speicific type of data
	* autotools-ized gui
	* added an option to determine which regions to be searched

2009-12-20 WANG Lu <coolwanglu(a)gmail.com>
	* basic float/double support
	* fixed a peek buffer bug, that the buffer is not shifted correctly
    * change format of some commands for the front-end
	* added a new 'write' command
	* fixed a data overwritten issue (Issue 1)

xxxx-xx-xx Tavis Ormandy <taviso@sdf.lonestar.org>
    * fixed infinite loop if a command was just leading whitespace.
    * add message to configure script about `libreadline-dev` package.
    * correct some typos reported by debian.

2007-06-07 Tavis Ormandy <taviso@sdf.lonestar.org>
    * make license clearer, added gpl notice to all source files, and added a show command.
        - eg, show copying, show warranty, etc.